--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html {
+  scroll-behavior: smooth;
+  scroll-margin-top: 300px;
+}
